[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/mission.png" type="Texture" id=1]
[ext_resource path="res://Mission.gd" type="Script" id=2]
[ext_resource path="res://Assets/icons/handcuffs.png" type="Texture" id=3]
[ext_resource path="res://Assets/icons/coins.png" type="Texture" id=4]
[ext_resource path="res://Assets/icons/shaking-hands.png" type="Texture" id=5]
[ext_resource path="res://Assets/font/OldNewspaperTypes.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/icons/person.png" type="Texture" id=7]
[ext_resource path="res://Assets/icons/sands-of-time.png" type="Texture" id=8]
[ext_resource path="res://Assets/icons/cancel.png" type="Texture" id=9]
[ext_resource path="res://Assets/icons/check-mark.png" type="Texture" id=10]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
absorbent = true

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 134, 276 )

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 22
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 6 )

[node name="Mission" type="RigidBody2D"]
position = Vector2( 72, -48 )
mass = 0.00102041
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 144, 360 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 144, 360 )
texture = ExtResource( 1 )

[node name="Title_label" type="Label" parent="."]
margin_left = 40.0
margin_top = 112.0
margin_right = 256.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Titre"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Type_label" type="Label" parent="."]
margin_left = 40.0
margin_top = 160.0
margin_right = 256.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text_label" type="RichTextLabel" parent="."]
margin_left = 40.0
margin_top = 208.0
margin_right = 256.0
margin_bottom = 312.0
custom_fonts/normal_font = SubResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Random text for the test of the mighty mission etc. \\zq dzq dqzd qzdqzdqzd z zq"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Won" type="ColorRect" parent="."]
margin_left = 32.0
margin_top = 336.0
margin_right = 256.0
margin_bottom = 368.0
rect_pivot_offset = Vector2( -216, -56 )
color = Color( 0, 1, 0, 0.196078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money" type="TextureRect" parent="Won"]
margin_left = 32.0
margin_right = 64.0
margin_bottom = 32.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money_label" type="Label" parent="Won"]
margin_left = 64.0
margin_right = 96.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 24, 8 )
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reputation" type="TextureRect" parent="Won"]
margin_left = 96.0
margin_right = 128.0
margin_bottom = 32.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reputation_label" type="Label" parent="Won"]
margin_left = 128.0
margin_right = 160.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 24, 8 )
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Compromise" type="TextureRect" parent="Won"]
margin_left = 160.0
margin_right = 192.0
margin_bottom = 32.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Compromise_label" type="Label" parent="Won"]
margin_left = 192.0
margin_right = 224.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 24, 8 )
custom_fonts/font = SubResource( 7 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tick" type="TextureRect" parent="Won"]
margin_right = 24.0
margin_bottom = 24.0
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lose" type="ColorRect" parent="."]
margin_left = 32.0
margin_top = 392.0
margin_right = 256.0
margin_bottom = 424.0
rect_pivot_offset = Vector2( -216, -56 )
color = Color( 1, 0, 0, 0.196078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money" type="TextureRect" parent="Lose"]
margin_left = 32.0
margin_right = 64.0
margin_bottom = 32.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money_label" type="Label" parent="Lose"]
margin_left = 64.0
margin_right = 96.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 24, 8 )
custom_fonts/font = SubResource( 8 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reputation" type="TextureRect" parent="Lose"]
margin_left = 96.0
margin_right = 128.0
margin_bottom = 32.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reputation_label" type="Label" parent="Lose"]
margin_left = 128.0
margin_right = 160.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 24, 8 )
custom_fonts/font = SubResource( 8 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Compromise" type="TextureRect" parent="Lose"]
margin_left = 160.0
margin_right = 192.0
margin_bottom = 32.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Compromise_label" type="Label" parent="Lose"]
margin_left = 192.0
margin_right = 224.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 24, 8 )
custom_fonts/font = SubResource( 8 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cross" type="TextureRect" parent="Lose"]
margin_right = 24.0
margin_bottom = 24.0
texture = ExtResource( 9 )
expand = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 40.0
margin_top = 448.0
margin_right = 248.0
margin_bottom = 512.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPC1" type="TextureRect" parent="ColorRect"]
visible = false
margin_right = 64.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 128, 64 )
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPC2" type="TextureRect" parent="ColorRect"]
visible = false
margin_left = 72.0
margin_right = 136.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 128, 64 )
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPC3" type="TextureRect" parent="ColorRect"]
visible = false
margin_left = 144.0
margin_right = 208.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 128, 64 )
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerIgnore" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="TimerMission" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 40.0
margin_top = 560.0
margin_right = 80.0
margin_bottom = 600.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="."]
margin_left = 88.0
margin_top = 560.0
margin_right = 256.0
margin_bottom = 600.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="ColorRect" parent="TimeLabel"]
margin_left = -9.0
margin_right = 158.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 0.439216 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="TimerIgnore" to="." method="_on_TimerIgnore_timeout"]
[connection signal="timeout" from="TimerMission" to="." method="_on_TimerMission_timeout"]
